<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Livewaves</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOG IN</string>
    <string name="subscribe">Subscribe</string>
    <string name="add_subscription">Add Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Full Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the terms of service</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_to_login">Back to login?</string>
    <string name="send">Send</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions!</string>
    <string name="accept_any_check_box">Select any Checkbox!</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_news_feed">NewsFeed</string>
    <string name="title_live">Live</string>
    <string name="title_alert">Alert</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="help">Help</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="getting_started">Geting Started</string>
    <string name="logout">Logout</string>
    <string name="edit_your_profile">You can edit your profile</string>
    <string name="help_text">We are willing to help you</string>
    <string name="term_text">Feel free to study our terms</string>
    <string name="started_text">Learn how to get started</string>
    <string name="logout_text">Thankyou for using our app</string>
    <string name="contact_text">Feel free to contact us</string>
    <string name="dummy_text">This is some dummy text, this is some dummy text, this is some dummy text, this is some dummy text.</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="lorem_ipsum_or_lipsum_as_it_is_some_times_lorem_ipsum_or_lipsum">Lorem ipsum, or lipsum as it is some times Lorem ipsum, or lipsum</string>
    <string name="join">Join</string>
    <string name="price_free">0</string>
    <string name="one">1</string>
    <string name="dollar_symbol">$ </string>
    <string name="pay_paid_amount">Pay $ %1$s</string>
    <string name="paid_post_amount">Paid $ %1$s </string>
    <string name="text_before_and_after_space">%1$s %2$s</string>
    <string name="forward_slash_between">%1$s / %2$s</string>
    <string name="resume">Resume</string>
    <string name="enter_stream_title">Enter Stream Title</string>
    <string name="category_selection">Category Selection</string>
    <string name="duration_selection">Duration Selection</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="add_location">Add location</string>
    <string name="create_stream">Create Stream</string>
    <string name="todo">TODO</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="please_enter_title">Please Enter Title</string>
    <string name="stream_title_length">Title must me at least 2 characters</string>
    <string name="title_should_be_less_then_100_char">Title Should be less then 100 Characters</string>
    <string name="empty_string" />
    <string name="paid_is_selected_please_enter_amount">Paid is selected please enter amount</string>
    <string name="amount_cant_be_zero">amount can\'t be 0</string>
    <string name="please_select_a_category">Please select a category</string>
    <string name="artist">Artist</string>
    <string name="no_running_stream">No Running Stream Found May be you should follow more people</string>
    <string name="post">Post</string>
    <string name="going">going</string>
    <string name="purchased_subscription">Purchased Subscription</string>
    <string name="specific_date">Specific Date</string>
    <string name="my_events">My Events</string>
    <string name="my_subscription">My Subscription</string>
    <string name="event_title_place_holder">Event Title Place holder</string>
    <string name="place_holder_date">Sun/18/20</string>
    <string name="events">Events</string>
    <string name="no_events_found">No events found</string>
    <string name="no_subscriptions_found">No subscription found</string>
    <string name="no_subscription_found">No Subscription plans</string>
    <string name="calender">calender</string>
    <string name="search">search</string>
    <string name="waves">waves</string>
    <string name="live">live</string>
    <string name="directions">Directions</string>
    <string name="check_in">Check In</string>
    <string name="go_live">Go live</string>
    <string name="event_image">event_image</string>
    <string name="event_title">event_title</string>
    <string name="event_title_text">Event title</string>
    <string name="subscription_title_text">Subscription title</string>
    <string name="starting_time">Starting time</string>
    <string name="location">Location</string>
    <string name="limited_or_unlimited">Limited or unlimited</string>
    <string name="ticket">Ticket#:</string>
    <string name="lable">Lable</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_number_of_tickets">Enter Number of Tickets</string>
    <string name="limited">limited</string>
    <string name="unlimited">Unlimited</string>
    <string name="stream">Stream</string>
    <string name="select_event_start_time">Select Event Start Time</string>
    <string name="event_start_time">Event Start Time</string>
    <string name="field_cant_be_empty">Field Can\'t be Empty or 0</string>
    <string name="field_cant_be_empty_or_zero">Amount Can\'t be Zero</string>
    <string name="field_must_be_greater">Field must be greater than 10 characters</string>
    <string name="buy">Buy</string>
    <string name="unlimited_seats">Unlimited Seats</string>
    <string name="edit_event">Edit Event</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_event">Delete Event</string>
    <string name="are_you_sure_cant_to_delete_event">Are you sure want to delete this event?</string>
    <string name="event_deleted_successfully">Event Deleted Successfully</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
    <string name="make_profile_private">Make profile private</string>
    <string name="change_password">Change Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="select_date">Select Date</string>
    <string name="people">People</string>
    <string name="toast_image_intent_null">No intent find</string>
    <string name="lbl_set_profile_photo">Select Image</string>
    <string name="lbl_take_camera_picture">From Camera</string>
    <string name="lbl_choose_from_gallery">From Gallery</string>
    <string name="api_key">AIzaSyCMR63Gt-Iwztwwt4dtpgwicYXq27oI03k</string>
    <string name="change_passowrd">Change Passowrd</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="confirm_password_dont_match_with_new_passowrd">Confirm password don\'t match with new password</string>
    <string name="same_password">Your password is same as current password</string>
    <string name="password_sould_be_grater_then_6_chr">Password should be grater then 6 Characters</string>
    <string name="password_change_successfully">Password Change Successfully</string>
    <string name="comments">Comments</string>
    <string name="normal">normal</string>
    <string name="enter_you_comment_here">Enter your comment here</string>
    <string name="comment">Comment</string>
    <string name="comment_reply">reply comment</string>
    <string name="comment_reply_adapter">reply</string>
    <string name="edit_comment">edit comment</string>
    <string name="edit_reply_comment">edit comment reply</string>
    <string name="no_comments_found">no comments found</string>
    <string name="no_replies_found">no replies found</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pay__to_view_this_post">Tap to Pay $ %1$s to view this post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video_gallery">Select Video From Gallery</string>
    <string name="video_giff">Select giff</string>
    <string name="select_picture_from_gallery">Select Picture Form Gallery</string>
    <string name="take_photo_from_camera">Take Photo From Camera</string>
    <string name="take_video_from_camera">Take Video From Camera</string>
    <string name="done">Done</string>
    <string name="cant_submit_with_amount_zero">Can\'t submit with amount 0</string>
    <string name="Live">Live</string>
    <string name="update">Update</string>
    <string name="new_version_of_app_is_available">New Version is available. You Need to update your app to continue</string>
    <string name="posts_found">No posts found</string>
    <string name="tracks_found">No tracks found</string>
    <string name="subscription_found">No Subscriptions found</string>
    <string name="playlist_found">No Playlist found</string>
    <string name="following_request_is_pending">Following request is pending</string>
    <string name="this_acount_is_private_but_you_can_send_them_a_request">This account is private but you can send them a follow request</string>
    <string name="time">Time</string>
    <string name="hashtags">HashTags</string>
    <string name="in_person">In-Person</string>
    <string name="livestream">LiveStream</string>
    <string name="create_event">Create Event</string>
    <string name="kick">Kick</string>
    <string name="empty">Empty!</string>
    <string name="paypal">Paypal Email</string>
    <string name="select_category">Select Category</string>
    <string name="add">Add</string>
    <string name="chats">Chats</string>
    <string name="recipients">Recipients</string>
    <string name="users">Users</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="share">Share</string>
    <string name="status">Status</string>
    <string name="account_number">Account Number</string>
    <string name="amount">Amount</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="save">Save</string>
    <string name="since_this_song">Since this song is paid, you can not add it</string>
    <string name="to_your_playlist_but">to your playlist but you can still listen to</string>
    <string name="the_song_in_other">the song in other\'s playlist.</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_private">Private</string>
    <string name="buy_dollar_nine">Subscribe $9</string>
    <string name="playlist_title">Playlist Title</string>
    <string name="choose">choose</string>
    <string name="song_thumbnail">Select Thumbnail</string>
</resources>