<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_news_feed"
        android:icon="@drawable/ic_newsfeed"
        android:title="@string/title_news_feed" />
    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/ic_live"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alert" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>