<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.livewave.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news_feed"
        android:name="com.app.livewave.fragments.newsfeed.NewsFeedFragment"
        android:label="@string/title_news_feed"
        tools:layout="@layout/fragment_news_feed" />

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.app.livewave.fragments.live.LiveFragment"
        android:label="@string/title_live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/navigation_alert"
        android:name="com.app.livewave.fragments.alert.AlertFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.app.livewave.fragments.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>