<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_margin="@dimen/margin_8"
    app:cardElevation="5dp"
    app:cardCornerRadius="@dimen/radius_16">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="@dimen/padding_10">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/profile_place_holder"
                android:id="@+id/img_profile"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:id="@+id/txt_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:id="@+id/txt_account_number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/txt_amount"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder_date"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_gravity="end"
                android:id="@+id/txt_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_gravity="end"
                android:id="@+id/txt_status"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>