<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.live.CreateStreamFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/bnw_no_stream_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:elevation="0dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_stream_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_stream_title"
                android:padding="@dimen/padding_16"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/rl_select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_50"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/ic_round_rectangle_white"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_category_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/category_selection" />
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:cardCornerRadius="10dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_going_myevents"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:tabBackground="@drawable/selected_background_color"
                app:tabIndicator="@null"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/black">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/free" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/paid" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:elevation="0dp"
            android:visibility="invisible"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_stream_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:padding="@dimen/padding_16"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_btn_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_location"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:theme="@style/SCBSwitch"
            app:switchPadding="100dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:backgroundTint="@color/pizza"
            android:outlineProvider="background"
            android:padding="@dimen/padding_16"
            android:text="@string/create_stream"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/radius_12"
            app:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</RelativeLayout>