<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="4dp"
    app:cardCornerRadius="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_30">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin_10"
            android:src="@drawable/ic_clear"
            app:tint="@color/buttercup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_10"
            android:text="@string/add_to_playlist"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <View
            android:layout_width="250dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:background="@color/grey_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/since_this_song"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/to_your_playlist_but"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/the_song_in_other"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_subscribe_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:backgroundTint="@color/pizza"
            android:outlineProvider="background"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:text="@string/buy_dollar_nine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/radius_8"
            app:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>