<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_30">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin_10"
            android:src="@drawable/ic_clear"
            app:tint="@color/buttercup" />

        <TextView
            android:id="@+id/create_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_10"
            android:text="@string/create_playlist"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <View
            android:layout_width="@dimen/dimen_200"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:background="@color/grey_900" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_playlist_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_20"
            android:elevation="0dp"
            app:boxCornerRadiusBottomEnd="@dimen/radius_16"
            app:boxCornerRadiusBottomStart="@dimen/radius_16"
            app:boxCornerRadiusTopEnd="@dimen/radius_16"
            app:boxCornerRadiusTopStart="@dimen/radius_16"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_title_24"
                android:drawablePadding="@dimen/margin_10"
                android:hint="@string/playlist_title"
                android:inputType="text"
                android:maxHeight="@dimen/dimen_200"
                android:minHeight="@dimen/margin_50"
                android:padding="@dimen/padding_16"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/til_playlist_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/input_border">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn_upload_playlist_thumbnail"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_baseline_attach_file_24"
                android:drawablePadding="@dimen/margin_10"
                android:focusable="false"
                android:hint="@string/song_thumbnail"
                android:inputType="text"
                android:padding="@dimen/padding_16"
                android:textCursorDrawable="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_playlist_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:backgroundTint="@color/pizza"
                android:outlineProvider="background"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="@string/choose"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/radius_8"
                app:elevation="5dp" />
        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/subcription_border"
            app:cardCornerRadius="@dimen/margin_10">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_public_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:tabBackground="@drawable/selected_background_color"
                app:tabIndicator="@null"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/black">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/privacy_private" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/privacy_public" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:backgroundTint="@color/pizza"
            android:outlineProvider="background"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/radius_8"
            app:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>